k8s/manifests-3df777/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-3df777
  namespace: journee
  labels:
    app: journee-3df777
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-3df777
  template:
    metadata:
      labels:
        app: journee-3df777
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-3df777
          image: gcr.io/my-docker-471807/journee:v5.0.0
          ports:
            - containerPort: 3000
